cambios para foro y comentarios